[package]
name = "axum-yaml"
version = "0.3.0"
edition = "2021"
authors = ["Mykhailo (Mike) Gavrylov <gavrikster@gmail.com>"]
description = "YAML extractor for axum"
repository = "https://github.com/gavrik/axum-yaml"
readme = "README.md"
license = "MIT"
keywords = ["axum", "yaml", "parser", "parsing", "extractor"]
categories = ["parsing", "text-processing", "encoding", "web-programming", "web-programming::http-server"]
exclude = [
    ".github/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
axum-core = "0.4"
bytes = "1.5"
hyper = { version = "1.1", features = ["full"] }
tokio = { version = "1.18", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_path_to_error = "0.1"
serde_yaml = "0.9"
mime = { version = "0.3" }

[dev-dependencies]
reqwest = "0.11"
tower-service = "0.3"
tower = "0.4"
http = "1.0"
uuid = { version = "1.1", features = ["serde"] }
